Начал внедрять orm

--- a/composer.json
+++ b/composer.json
@@ -22,15 +22,16 @@
         }
     ],
     "require": {
-        "php": "^7.4 || ^8.0",
+        "php": "^8.0",
         "ext-json": "*",
+        "ext-pdo": "*",
+        "doctrine/orm": "^2.14",
         "monolog/monolog": "^2.9",
         "php-di/php-di": "^6.4",
         "slim/psr7": "^1.6",
         "slim/slim": "^4.11",
         "slim/twig-view": "^3.3",
-        "ext-pdo": "*",
-        "doctrine/orm": "^2.14"
+        "symfony/cache": "^6.2"
     },
     "require-dev": {
         "jangregor/phpstan-prophecy": "^1.0.0",
