--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,7 @@
         "php": "^8.0",
         "ext-json": "*",
         "ext-pdo": "*",
+        "doctrine/migrations": "^3.6",
         "doctrine/orm": "^2.14",
         "monolog/monolog": "^2.9",
         "php-di/php-di": "^6.4",
